Incl. path to gitbash bin in vscode

--- a/rmd/diverse.Rmd
+++ b/rmd/diverse.Rmd
@@ -127,6 +127,10 @@ På noen Windows10-maskiner er ikke *git* installert slik at *vscode* kan se *gi
     "git.enabled": true,
     "git.path": "c:\\ProgramData\\App-V\\0F29C83E-A275-4BEE-9296-92C3138DC9BC\\32D66D7D-55BA-4223-802C-F435F81AD5AD\\Root\\VFS\\ProgramFilesX64\\Git\\mingw64\\bin\\git.exe",
     "terminal.integrated.shell.windows": "c:\\ProgramData\\App-V\\0F29C83E-A275-4BEE-9296-92C3138DC9BC\\32D66D7D-55BA-4223-802C-F435F81AD5AD\\Root\\VFS\\ProgramFilesX64\\Git\\usr\\bin\\bash.exe",
+    "terminal.integrated.env.windows": {
+        "PATH": "/c/ProgramData/App-V/0F29C83E-A275-4BEE-9296-92C3138DC9BC/32D66D7D-55BA-4223-802C-F435F81AD5AD/Root/VFS/ProgramFilesX64/Git/mingw64/bin/"
+      },
+    "terminal.integrated.shellArgs.windows": ["-l"],
 ```
 Adressen `0F29C83E-A275-4BEE-9296-92C3138DC9BC\\32D66D7D-55BA-4223-802C-F435F81AD5AD` kan sees hvis man åpner `git bash` og ser på vinduet som åpnes smatidig. Der vil denne adressen stå (se figur).
 
