try to fix htmlproofer error

--- a/rmd/python.Rmd
+++ b/rmd/python.Rmd
@@ -1,7 +1,7 @@
 # Python
 
 - Installér Python 3, lastet ned fra [python.org](https://www.python.org/downloads/)
-- For å installere numpy (og andre python-pakker), last ned wheel-pakke [herfra](http://www.lfd.uci.edu/~gohlke/pythonlibs/) og installer med *pip* (i en terminal)
+- For å installere numpy (og andre python-pakker), last ned wheel-pakke [herfra](https://www.lfd.uci.edu/~gohlke/pythonlibs/) og installer med *pip* (i en terminal)
 ```
 $ pip install filename.whl
 ```
