--- a/rmd/diverse.Rmd
+++ b/rmd/diverse.Rmd
@@ -14,11 +14,28 @@ SKDE Servicemiljøet | 997515@uc.nhn.no |        | 997515 | https://join.nhn.no/
 Disse kan ringes opp på følgende måter, med Servicemiljøet som eksempel:
 
 - Skype for Business: ring *997515@uc.nhn.no*
+- Teams: Søk på *997515@uc.nhn.no* i søkefeltet og ring opp. Ikke mulig å dele skjerm/presentasjon hvis man bruker Teams. Må da heller koble seg på gjennom nettleser (se punkt under).
 - Per telefon: ring *77602100*, slå inn konferanse-ID *997515* og avslutt med *#*
 - For deltagere utenfor helsenettet eller uten Skype for Business: gå til siden https://join.nhn.no/, tast inn navnet ditt, og ring nummer *997515*. Eventuelt gå direkte til https://join.nhn.no/webapp/conference/997515
   - Denne løsningen kan fungere dårlig med Internet Explorer. Prøv eventuelt Chrome, Safari eller Firefox.
   - Løsningen fungerer ikke bak brannmuren til Helse Nord.  
 - Videokonferanse over helsenettet: ring *997515*
+
+## Teams
+
+### Piping
+
+Hvis man opplever kraftig piping når man ringer med Teams skyldes det som regel at **Skype** også kjører i bakgrunnen. Denne kan slås av i *Oppgavebehandling*.
+
+Trykk `ctrl-alt-delete` og velg *Oppgavebehandling*. Finn `Skype for Business` her og drep denne prosessen.
+
+### Koble seg til virtuelt møterom
+
+Søk etter det virtuelle møterommet og velg video/telefon:
+
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/vm_teams.png")
+```
 
 ## Koble til nettverksstasjoner
 
